[FASTFAT] - Modify the VfatHasFileSystem() so that it allows a DO_VERIFY_VOLUME override, when required - Fix the implementation of VfatVerify() so that it actually really does the job it's supposed to do:   - it will now use the appropriate DO for verification (lower DO and not volume DO)   - it will properly clear the DO_VERIFY_VOLUME flag - Introduce a hack in VfatVerify() so that in case of removal media, if FATInfo is the same, it forces a dismount

Effects of this commit:
- It properly fixes CORE-9988. That means if a FAT media changes, now FastFAT properly handles it, and does not go to a code path producing (expected!) BSODs
- The hack introduces a hacky way to make ReactOS remount FAT floppies when changed

In short, changing FAT floppy in ReactOS doesn't make it BSOD any longer.

CORE-9988

svn path=/trunk/; revision=73709